src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>DF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DF Contact</label>
        <referenceTo>DF_Contact__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Data_management_permission__c</fullName>
        <label>Data management permission</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No further contact</fullName>
                </value>
                <value>
                    <fullName>Only schools resources information</fullName>
                </value>
                <value>
                    <fullName>All Society opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Demographic_record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Demographic Information record</label>
        <referenceTo>Demographic_information__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>How_will_you_be_using_the_resources__c</fullName>
        <label>How will you be using the resources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>View them</fullName>
                </value>
                <value>
                    <fullName>Use with my class/ youth group</fullName>
                </value>
                <value>
                    <fullName>Pass on</fullName>
                </value>
                <value>
                    <fullName>Talk to my child</fullName>
                </value>
                <value>
                    <fullName>Use with my class or youth group</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Import_Source__c</fullName>
        <description>Indentifies import processes that create new records</description>
        <label>Import Source</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Newsletters__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletters</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password_Reset_Key__c</fullName>
        <label>Password Reset Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reciprocal_Contact_Id__c</fullName>
        <formula>IF(DF_Contact__r.Portal_Contact__c = LEFT(Id,15), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reciprocal Contact Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source_of_enquiry__c</fullName>
        <label>Source of enquiry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AMH website</fullName>
                </value>
                <value>
                    <fullName>YP inbox</fullName>
                </value>
                <value>
                    <fullName>Scouts inbox</fullName>
                </value>
                <value>
                    <fullName>DF inbox</fullName>
                </value>
                <value>
                    <fullName>PP inbox</fullName>
                </value>
                <value>
                    <fullName>Customer Care</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>DAA</fullName>
                </value>
                <value>
                    <fullName>Fundraising team</fullName>
                </value>
                <value>
                    <fullName>Volunteering team</fullName>
                </value>
                <value>
                    <fullName>Services team</fullName>
                </value>
                <value>
                    <fullName>AS website&apos;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teacher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teacher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter_handle__c</fullName>
        <label>Twitter handle</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Created_Last_Week</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Created Last Week</label>
    </listViews>
    <listViews>
        <fullName>Created_Yesterday</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.CREATED_DATE</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>10/11/2015 10:40 AM</value>
        </filters>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>10/11/2015 4:40 PM</value>
        </filters>
        <label>Created  Yesterday</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>YE_Newsletter_Subscribers</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Data_management_permission__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Data_management_permission__c</field>
            <operation>equals</operation>
            <value>Only schools resources information,All Society opportunities</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Youth_engagement</value>
        </filters>
        <label>YE - Newsletter Subscribers</label>
        <sharedTo>
            <group>Youth_Engagement</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Youth_Engagement</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>How_will_you_be_using_the_resources__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Youth_engagement</value>
        </filters>
        <label>Youth Engagement</label>
        <sharedTo>
            <group>Youth_Engagement</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>DFStaff</fullName>
        <active>true</active>
        <label>Dementia Friend Staff</label>
    </recordTypes>
    <recordTypes>
        <fullName>DF_Partner_Organisation_Admin</fullName>
        <active>true</active>
        <label>DF Partner Organisation Admin</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friend</fullName>
        <active>true</active>
        <label>Dementia Friend</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dementia_Friend_Champion</fullName>
        <active>true</active>
        <label>Dementia Friend Champion</label>
    </recordTypes>
    <recordTypes>
        <fullName>E_Newsletter_Subscriber</fullName>
        <active>true</active>
        <label>E-Newsletter Subscriber</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSO</fullName>
        <active>true</active>
        <label>RSO</label>
    </recordTypes>
    <recordTypes>
        <fullName>Registration</fullName>
        <active>true</active>
        <label>Registration</label>
    </recordTypes>
    <recordTypes>
        <fullName>Youth_engagement</fullName>
        <active>true</active>
        <description>Youth engagement data</description>
        <label>Youth engagement</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>